anadir grado superior

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     <section id="FormacionAcademica">
       <h4>FORMACIÓN ACADÉMICA</h4>
       <ul>
+        <li >Desarrollo de Aplicaciones Multiplataforma 
+          <ul class="infocurso">
+            <li><i>IES El Cañaveral - Móstoles</i></li>
+            <li class="fecha">[Septiembre 2024-Actualmente]</li>
+          </ul>  
+        </li>
         <li >Bachillerato de CSS 
           <ul class="infocurso">
             <li><i>IES Santiago Rusiñol - Aranjuez</i></li>
